# qinnovate

./: .gitignore  ABOUT.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  INTEGRATION-ROADMAP.md  LICENSE  README.md  SECURITY.md  VALIDATION.md  astro.config.mjs  brands.json  index.html  package-lock.json  package.json  tsconfig.json
.github/: CODEOWNERS  FUNDING.yml  WORKFLOWS.md  dependabot.yml
blogs/: 2026-01-15-the-osi-of-mind-securing-human-ai-interfaces.md  2026-01-16-your-brain-has-a-spam-filter-can-we-reverse-engineer-it.md  2026-01-16-your-brain-needs-a-firewall-heres-what-it-would-look-like.md  2026-01-17-neural-ransomware-isnt-science-fiction.md  2026-01-19-my-moms-heart-attack-went-undetected-for-20-days-heres-what-i-learned.md  (+46 more)
brain-firewall/: README.md  (+2 more)
crates/nsp/: Cargo.toml
crates/nsp/src/: crypto.rs  error.rs  frame.rs  handshake.rs  main.rs
oni-legacy/tara-nsec-platform/: AGENTS.md  API.md  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
oni-legacy/tara-nsec-platform/tara_mvp/: __init__.py  _brand.py  cli.py
oni-legacy/tara-nsec-platform/tara_mvp/attacks/: __init__.py  generator.py  patterns.py  scenarios.py  simulator.py
oni-legacy/tara-nsec-platform/tara_mvp/core/: __init__.py  firewall.py  layers.py
oni-legacy/tara-nsec-platform/tara_mvp/data/: __init__.py  bci_nodes.py  brain_regions.py  moabb_adapter.py  openbci_adapter.py
oni-legacy/tara-nsec-platform/tara_mvp/data/export/: __init__.py
oni-legacy/tara-nsec-platform/tara_mvp/neurosecurity/: __init__.py  integration.py
oni-legacy/tara-nsec-platform/tara_mvp/nsam/: __init__.py  alerts.py  detector.py  events.py  monitor.py  rules.py
oni-legacy/tara-nsec-platform/tara_mvp/persistence/: __init__.py
oni-legacy/tara-nsec-platform/tara_mvp/simulation/: __init__.py
oni-legacy/tara-nsec-platform/tara_mvp/simulation/engine/: __init__.py  events.py  recorder.py  simulator.py
oni-legacy/tara-nsec-platform/tara_mvp/simulation/networks/: __init__.py  base.py  layered.py  recurrent.py  small_world.py
oni-legacy/tara-nsec-platform/tara_mvp/simulation/neurons/: __init__.py  adaptive_lif.py  base.py  hodgkin_huxley.py  izhikevich.py  lif.py
oni-legacy/tara-nsec-platform/tara_mvp/simulation/synapses/: __init__.py  base.py  chemical.py  electrical.py  stdp.py
oni-legacy/tara-nsec-platform/tara_mvp/tests/: __init__.py  conftest.py  test_core.py  test_data.py  test_moabb_adapter.py
oni-legacy/tara-nsec-platform/tara_mvp/ui/: __init__.py  app.py  styles.py
oni-legacy/tara-nsec-platform/tara_mvp/ui/widgets/: __init__.py
oni-legacy/tara-nsec-platform/tara_mvp/visualization/: __init__.py
oni-legacy/tara-nsec-platform/tara_mvp/visualization/components/: __init__.py  brain_topology.py  firewall_pipeline.py
oni-legacy/tara-nsec-platform/tara_mvp/visualization/embeds/: __init__.py  html_bridge.py
oni-legacy/tara-nsec-platform/tara_mvp/visualization/themes/: __init__.py  oni_theme.py
oni-legacy/tara-nsec-platform/tests/: test_moabb_adapter.py  test_stimulation.py
packaging/qtara/: README.md  pyproject.toml
packaging/qtara/src/qtara/: cli.py  core.py  models.py  stix.py
packaging/qtara/src/qtara/data/: qtara-registrar.json
packaging/qtara/tests/: test_stix.py
qif-framework/archive/oni-framework/oni-framework/: API.md  pyproject.toml
qif-framework/archive/oni-framework/oni-framework/oni/: scale_freq.py
qif-framework/archive/oni-framework/oni-framework/tests/neurosecurity/: __init__.py  test_anonymizer.py
qif-framework/nsp/nsp-core/: .gitignore  Cargo.toml
qif-framework/nsp/nsp-core/src/: lib.rs  messages.rs
src/lib/runemate-forge/: Cargo.toml  SCOPE.md  STATUS.md  STAVES-SPEC.md  THREAT-MODEL.md
src/lib/runemate-forge/src/: ast.rs  codegen.rs  disasm.rs  error.rs  lexer.rs  lib.rs  parser.rs  secure.rs  tara.rs
tools/autodidactive/: README.md  pyproject.toml
tools/autodidactive/bci-zoom/: .gitignore  IMAGE_STITCH_WORKFLOW.md  README.md
tools/autodidactive/bci-zoom/blender/: setup_bci_zoom.py
tools/autodidactive/bci-zoom/manim/: neuron_bci_animation.py
tools/autodidactive/bci-zoom/reference/: oni-layers-mapping.md
tools/autodidactive/bci-zoom/scripts/: add_labels.py  add_labels_extended.py
tools/autodidactive/learnviz/: .gitignore  README.md  __init__.py  analyzer.py  learnviz.py  requirements.txt  ui.py
tools/autodidactive/learnviz/generators/: __init__.py  manim_gen.py  narration.py  ollama_gen.py
tools/autodidactive/learnviz/output/: dopamine_reward_pathways_in_the_20260128_141157.py  how_does_a_bci_decode_20260128_140824.py  how_does_dns_work_20260128_141940.py
tools/autodidactive/motion/: CLAUDE.md  package-lock.json  package.json  tsconfig.json  vite.config.js
tools/autodidactive/motion/src/: project.ts  theme.ts
tools/autodidactive/motion/src/scenes/: coherence.tsx  credits.tsx  layers.tsx  title.tsx
tools/autodidactive/neuroscience/: README.md
tools/autodidactive/neuroscience/brain-regions/cerebral-cortex/motor-cortex/: Research-BCI_Mouse_Movement.md
tools/autodidactive/neuroscience/visualizing-the-mind/: README.md
tools/autodidactive/neuroscience/visualizing-the-mind/2D-mindmapper/manim/bci-zoom/: README.md  requirements.txt
tools/autodidactive/neuroscience/visualizing-the-mind/2D-mindmapper/manim/bci-zoom/data/: scales.json
tools/autodidactive/neuroscience/visualizing-the-mind/2D-mindmapper/manim/bci-zoom/scenes/: bci_zoom_animation.py
tools/autodidactive/neuroscience/visualizing-the-mind/2D-mindmapper/manim/bci-zoom/utils/: __init__.py  theme.py
tools/autodidactive/neuroscience/visualizing-the-mind/3D-mindmapper/blender/bci-zoom-3d/: README.md  bci_zoom_scene.blend  bci_zoom_scene.blend1
tools/autodidactive/neuroscience/visualizing-the-mind/3D-mindmapper/blender/bci-zoom-3d/scripts/: bci_zoom_3d.py
tools/autodidactive/oni-academy/: LICENSE  ONI_ACADEMY.md  README.md  pyproject.toml
tools/autodidactive/oni-academy/oni_academy/: __init__.py  _brand.py  cli.py  visualization.py
tools/autodidactive/oni-academy/tests/: __init__.py  test_init.py
tools/autodidactive/workflow/pipeline/adaptive-styles/: README.md
(+1177 files in other folders)
