[package]
name = "nsp"
version = "0.1.0"
edition = "2021"
description = "Neural Sensory Protocol — a post-quantum cryptographic specification for BCI data streams."
authors = ["Qinnovate"]

[dependencies]
# Post-Quantum Primitives
pqcrypto-traits = "0.3"
pqcrypto-kyber = "0.7" # ML-KEM (Kyber)
pqcrypto-dilithium = "0.4" # ML-DSA (Dilithium)
pqcrypto-sphincsplus = "0.6" # SLH-DSA (SPHINCS+)

# Symmetric & Utilities
aes-gcm = { version = "0.10", default-features = false, features = ["aes", "alloc"] }
hkdf = "0.12"
sha2 = { version = "0.10", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "scientific_audit"
path = "src/main.rs"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
