[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oni-tara"
version = "0.8.1"
description = "TARA - Telemetry Analysis & Response Automation. A neural security platform for brain-computer interfaces with Kohno threat taxonomy and BCI privacy filtering."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
authors = [
    {name = "Kevin L. Qi"}
]
keywords = [
    "neuroscience",
    "bci",
    "brain-computer-interface",
    "neural-security",
    "neural-telemetry",
    "cybersecurity",
    "nsam",
    "neural-signal-assurance",
    "threat-detection",
    "attack-simulation",
    "neural-networks",
    "coherence",
    "oni-framework",
    "blue-team",
    "defensive-security",
    "neurosecurity",
    "bci-privacy",
    "kohno",
    "erp-filtering",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
ui = [
    "streamlit>=1.28.0",
    "plotly>=5.17.0",
]
simulation = [
    "matplotlib>=3.5.0",
    "pandas>=1.4.0",
]
moabb = [
    # Mother of All BCI Benchmarks - BSD 3-Clause License
    # Provides standardized EEG datasets for security testing
    # Citation: Jayaram & Barachant (2018), J Neural Eng 15(6)
    "moabb>=0.5.0",
    "mne>=1.0.0",
    "scikit-learn>=1.0.0",
    "pandas>=1.4.0",
]
full = [
    "streamlit>=1.28.0",
    "plotly>=5.17.0",
    "matplotlib>=3.5.0",
    "pandas>=1.4.0",
    "scikit-learn>=1.0.0",
    "moabb>=0.5.0",
    "mne>=1.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
]

[project.urls]
Homepage = "https://github.com/qinnovates/mindloft"
Documentation = "https://github.com/qinnovates/mindloft/tree/main/MAIN/legacy-core/tara-nsec-platform"
Repository = "https://github.com/qinnovates/mindloft"
Issues = "https://github.com/qinnovates/mindloft/issues"

[project.scripts]
tara = "tara_mvp.cli:main"

# Source code is now in ./tara_mvp/ (renamed from tara)
# Tests are in ./tara_mvp/tests/
# Visualizations moved to ../interactive-oni-visualizations/
# For development: pip install -e .
[tool.hatch.build.targets.wheel]
packages = ["tara_mvp"]

[tool.hatch.build.targets.sdist]
include = [
    "tara_mvp",
    "/README.md",
    "/LICENSE",
]

[tool.pytest.ini_options]
testpaths = ["tara_mvp/tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D", "UP", "B", "C4"]
ignore = ["D100", "D104", "D107"]

[tool.black]
line-length = 100
target-version = ["py39"]
