[package]
name = "nsp-core"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
bincode = "1.3.3"
fips203 = "0.4.3"
fips204 = "0.4.6"
hex = "0.4.3"
hkdf = "0.12.4"
rand = "0.8.5"
rand_core = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.10.8"
thiserror = "2.0.18"
