[package]
name = "runemate-forge"
version = "0.1.0"
edition = "2024"

[dependencies]
html5ever = "0.26"
cssparser = "0.34.0"
serde = { version = "1.0", features = ["derive"] }
bitvec = "1.0"
thiserror = "2.0"
bincode = "1.3"
markup5ever_rcdom = "0.2"
nsp-core = { path = "../nsp-core" }

[dev-dependencies]
criterion = "0.5"
