[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oni-framework"
version = "0.2.6"
description = "Cₛ Core - Mathematical API for detection signatures and anomaly validation in brain-computer interfaces. Build security rules using coherence scoring (Cₛ) and scale-frequency invariant (f×S≈k) equations."
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Kevin L. Qi"}
]
maintainers = [
    {name = "Kevin L. Qi"}
]
keywords = [
    "brain-computer-interface",
    "BCI",
    "neural-security",
    "neurosecurity",
    "neuroethics",
    "neuroscience",
    "cybersecurity",
    "signal-processing",
    "coherence-metric",
    "neural-firewall",
    "privacy",
    "EEG",
    "neural-interface",
    "medical-device-security",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.0",
    "mypy>=1.0",
]
viz = [
    "matplotlib>=3.5",
    "numpy>=1.21",
]
all = [
    "oni-framework[dev,viz]",
]

# Note: For educational content and interactive learning UI, install oni-academy instead:
#   pip install oni-academy[ui]

[project.urls]
Homepage = "https://qinnovates.github.io/ONI/"
Documentation = "https://github.com/qinnovates/mindloft/tree/main/MAIN/legacy-core/oni-framework"
Repository = "https://github.com/qinnovates/mindloft"
Issues = "https://github.com/qinnovates/mindloft/issues"
Changelog = "https://github.com/qinnovates/mindloft/blob/main/MAIN/legacy-core/oni-framework/CHANGELOG.md"

[project.scripts]
oni = "oni.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["oni*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
